--- a/index.html
+++ b/index.html
@@ -6,5 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EJERCICIO 1</title>
   </head>
-  <body></body>
+  <body>
+    <h1>EJERCICIO NUMERO 1 NUCBA</h1>
+    <img src="c:\Users\escud\Downloads\01.jpg" alt="seleccion" />
+    <p>
+      Como ejercicio quise hacer algo sobre la selección Argentina. Todos
+      estamos entusiasmados con la selección, es lo que mas se habla en las
+      calles argentinas hoy en día y que mejor para hacer el trabajo en base a
+      nuestra querida selección y por lo proximo que se viene con el mundial de
+      futbol
+    </p>
+    <br />selecciones rivales de Argentina en fase de grupos: <br />GRUPO C
+    <ul>
+      <li>Arabia saudita</li>
+      <li>México</li>
+      <li>Polonia</li>
+      <br />
+      <b>Días que se enfrentan contra la selección:</b>
+      <table>
+        <th>lunes</th>
+        <th>martes</th>
+        <th>miercoles</th>
+        <th>jueves</th>
+        <th>viernes</th>
+        <th>sabado</th>
+        <th>domingo</th>
+        <th></th>
+        <br />
+
+        <tr>
+          <th></th>
+          <th>|22/vs Arabia Saudita|</th>
+          <th>|30/vs Polonia|</th>
+          <th></th>
+          <th></th>
+          <th>|26/ vs México|</th>
+          <th></th>
+        </tr>
+      </table>
+    </ul>
+  </body>
 </html>
