--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>EJERCICIO NUMERO 1 NUCBA</h1>
-    <img src="c:\Users\escud\Downloads\01.jpg" alt="seleccion" />
+    <img src="c:\Users\escud\Downloads\01.jpg" alt="seleccion" width="1023" height="682"/>
     <p>
       Como ejercicio quise hacer algo sobre la selección Argentina. Todos
       estamos entusiasmados con la selección, es lo que mas se habla en las
@@ -45,5 +45,29 @@
         </tr>
       </table>
     </ul>
+    <p>
+      En esta página vamos a ver todo sobre la selección en el mundial, nos
+      encantaría poder darte la mejor información en todo momento sobre la
+      selección Argentina.
+    </p>
+    <ul> <li><label> cliquee si queres suscribirte a nuestro newsletter</label>
+    <input type="checkbox" id="checkbox2" checked /></li> 
+    <br />
+    <li><label>cliquee si queres que antes de cada partido te llegue un mail a tu correo
+      electronico 30 minutos antes del partido </label>
+    <input type="checkbox" id="checkbox" /></li>
+</ul>  
+    <p>
+      <label>mail:</label>
+      <input type="text" id="mail" placeholder="ingrese su mail" />
+    </p>
+    <p>
+      Nos encantaría que nos cuentes si tenes alguna cabala y tambien tu promesa
+      en caso de que Argentina se consagre campeón del mundo
+      <b>(anulo mufa)</b>.
+      <textarea name="text" id="text" cols="40" rows="5"></textarea>
+    </p>
+    <button type="submit">haz clic aqui para suscribirte a nuestra pagina</button>
+</body>
   </body>
 </html>
