--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <h1>EJERCICIO NUMERO 1 NUCBA</h1>
-    <img src="c:\Users\escud\Downloads\01.jpg" alt="seleccion" width="1023" height="682"/>
+    <img
+      src="c:\Users\escud\Downloads\01.jpg"
+      alt="seleccion"
+      width="1023"
+      height="682"
+    />
     <p>
       Como ejercicio quise hacer algo sobre la selección Argentina. Todos
       estamos entusiasmados con la selección, es lo que mas se habla en las
@@ -16,12 +21,29 @@
       nuestra querida selección y por lo proximo que se viene con el mundial de
       futbol
     </p>
-    <br />selecciones rivales de Argentina en fase de grupos: <br />GRUPO C
+    <br>Estas son todas las copas de la selección, nunca esta mal para recordar <b>lo gigantes que somos</b>: </br>
+    <br />
+    <ol>
+      <li><b> 2 Mundiales: Argentina 1978 y México 1986.</b></li>
+      <li>
+        Copas América: 1921, 1925, 1927, 1929, 1937,1941, 1945, 1946, 1947,
+        1955, 1957,1959-I, 1991, 1993, 2021.
+      </li>
+      <li>Copa de Campeones Conmebol-UEFA: 1993 y 2022</li>
+      <li>
+        Copa de las Confederaciones: Arabia Saudita 1992 (por entonces se
+        llamaba Copa Rey Fahad).
+      </li>
+      <li>Campeonatos panamericano: (1960)</li>
+    </ol>
+    <br />selecciones rivales de Argentina en fase de grupos: <br />
+    <ul><li> GRUPO C</li> 
     <ul>
       <li>Arabia saudita</li>
       <li>México</li>
       <li>Polonia</li>
       <br />
+    </ul>
       <b>Días que se enfrentan contra la selección:</b>
       <table>
         <th>lunes</th>
@@ -36,11 +58,11 @@
 
         <tr>
           <th></th>
-          <th>|22/vs Arabia Saudita|</th>
-          <th>|30/vs Polonia|</th>
+          <th>|22/11 vs Arabia Saudita|</th>
+          <th>|30/11 vs Polonia|</th>
           <th></th>
           <th></th>
-          <th>|26/ vs México|</th>
+          <th>|26/11 vs México|</th>
           <th></th>
         </tr>
       </table>
@@ -50,24 +72,45 @@
       encantaría poder darte la mejor información en todo momento sobre la
       selección Argentina.
     </p>
-    <ul> <li><label> cliquee si queres suscribirte a nuestro newsletter</label>
-    <input type="checkbox" id="checkbox2" checked /></li> 
-    <br />
-    <li><label>cliquee si queres que antes de cada partido te llegue un mail a tu correo
-      electronico 30 minutos antes del partido </label>
-    <input type="checkbox" id="checkbox" /></li>
-</ul>  
+      <ul>
+      <li>
+        <label> cliquee si queres suscribirte a nuestro newsletter</label>
+        <input type="checkbox" id="checkbox2" checked />
+      </li>
+      <br />
+      <li>
+        <label
+          >cliquee si queres que antes de cada partido te llegue un mail a tu
+          correo electronico 30 minutos antes del partido
+        </label>
+        <input type="checkbox" id="checkbox" />
+      </li>
+    </ul>
     <p>
-      <label>mail:</label>
+      <label>Mail:</label>
       <input type="text" id="mail" placeholder="ingrese su mail" />
     </p>
+    <br>
+    <label>De que lugar del mundo seguis a la escaloneta?</label>
+    <input type="text" id="mail" placeholder="País">
     <p>
-      Nos encantaría que nos cuentes si tenes alguna cabala y tambien tu promesa
+      Nos encantaría que nos cuentes si tenes alguna cábala y tambien tu promesa
       en caso de que Argentina se consagre campeón del mundo
       <b>(anulo mufa)</b>.
       <textarea name="text" id="text" cols="40" rows="5"></textarea>
     </p>
-    <button type="submit">haz clic aqui para suscribirte a nuestra pagina</button>
-</body>
+    <br> Quien te gustaría que clasifique ademas de Argentina en el grupo?
+    <select> name="País"
+      <option>Polonia</option>
+      <option>Mexico</option>
+      <option>Arabia Saudita</option></select>
+      <br>
+    <p><button type="submit">
+      haz clic aqui para suscribirte a nuestra página
+    </button></p>
+    </ol>
+    <ul>
+      <li>Nombre del alumno: <b> Enzo Escudero</b></li>
+      <li>Camada: #2717</li></ul>
   </body>
 </html>
